# cow

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  labels.json
src/: handlers.rs  lib.rs  main.rs  state.rs  types.rs  validation.rs
static/: admin.html
