[package]
name = "openherd-cow"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
pgp = "0.13"
hex = "0.4"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sled = "0.34"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
